--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body class="background-radial-gradient">
-    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="container contenedorInicial px-4 py-5 px-md-5 text-center text-lg-start my-5">
         <div class="row gx-lg-5 align-items-center mb-5">
             <div class="col-lg-6 mb-5 mb-lg-0">
                 <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
@@ -16,9 +16,9 @@
                     <span style="color: hsl(218, 81%, 75%)">VIDA SALUDABLE</span>
                 </h1>
                 <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-                    Jair Sneider Carvajal Celis <br/>
-                    Francy <br/>
-                    Eliana 
+                    Jair Carvajal <br/>
+                    Francy Ospina<br/>
+                    Eliana Nieto
                 </p>
             </div>
 
