funcionales de seguimiento

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                     <span style="color: hsl(218, 81%, 75%)">VIDA SALUDABLE</span>
                 </h1>
                 <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-                    Jair Carvajal <br/>
+                    Jair Sneider Carvajal Celis <br/>
                     Francy Ospina<br/>
                     Eliana Nieto
                 </p>
