--- a/dashboard_inicial.html
+++ b/dashboard_inicial.html
@@ -26,7 +26,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a id="PerfilName" class="nav-link" href="dashboard_inicial.html"><i class="bi bi-person"></i></a></li>
+                    <li class="nav-item"><a id="PerfilName" class="nav-link" href="perfil_user.html"><i class="bi bi-person"></i></a></li>
                     <li class="nav-item"><a id="logout" class="nav-link"><i class="bi bi-box-arrow-right"></i></a></li>
                 </ul>
             </div>
@@ -39,10 +39,10 @@
             <nav class="col-md-3 col-lg-2 d-md-block bg-dark sidebar" id="sidebar">
                 <div class="position-sticky">
                     <ul class="nav flex-column text-white">
-                        <li class="nav-item active"><a class="nav-link text-white" href="dashboard_inicial.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="bi bi-bar-chart"></i> Reportes</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="dashboard_inicial.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="bi bi-bar-chart"></i> Multimedia</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="listUsers.html"><i class="bi bi-people"></i> Usuarios</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="bi bi-sliders"></i> Ajustes</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="seguimiento.html"><i class="bi bi-sliders"></i> seguimiento</a></li>
                     </ul>
                 </div>
             </nav>
@@ -99,6 +99,7 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="global.js"></script>
     <script src="dashboard.js"></script>
 </body>
 </html>
