--- a/perfil_user.html
+++ b/perfil_user.html
@@ -53,50 +53,39 @@
                 </div>
                 <form class="row g-3">
                     <div class="col-md-6">
-                      <label for="inputEmail4" class="form-label">Email</label>
+                      <label class="form-label">Email</label>
                       <input type="email" class="form-control" id="inputEmail">
                     </div>
                     <div class="col-md-6">
-                      <label for="inputPassword4" class="form-label">Password</label>
+                      <label class="form-label">Password</label>
                       <input type="password" class="form-control" id="inputPassword4">
                     </div>
                     <div class="col-6">
-                      <label for="inputAddress" class="form-label">Nombres</label>
-                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                      <label class="form-label">Nombres</label>
+                      <input type="text" class="form-control" id="inputNombre">
                     </div>
                     <div class="col-6">
-                      <label for="inputAddress2" class="form-label">Apellidos</label>
-                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-                    </div>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-                    </div>
-                    
-                    <div class="col-3">
-                      <div class="form-check">
-                        <input class="form-check-input border" type="radio" name="progressRadio" id="progress25" value="25">
-                        <label class="form-check-label" for="progress25">25 %</label>
-                      </div>
-                    </div>
-                    <div class="col-3">
-                      <div class="form-check">
-                        <input class="form-check-input border" type="radio" name="progressRadio" id="progress50" value="50">
-                        <label class="form-check-label" for="progress50">50 %</label>
-                      </div>
-                    </div>
-                    <div class="col-3">
-                      <div class="form-check">
-                        <input class="form-check-input border" type="radio" name="progressRadio" id="progress75" value="75">
-                        <label class="form-check-label" for="progress75">75 %</label>
-                      </div>
-                    </div>
-                    <div class="col-3">
-                      <div class="form-check">
-                        <input class="form-check-input border" type="radio" name="progressRadio" id="progress100" value="100">
-                        <label class="form-check-label" for="progress100">100 %</label>
-                      </div>
-                    </div>
-                    
+                      <label class="form-label">Apellidos</label>
+                      <input type="text" class="form-control" id="inputApellidos">
+                    </div>        
+
+                    <div class="col-4">
+                      <label class="form-label">Edad</label>
+                      <input type="text" class="form-control" id="inputEdad">
+                    </div>        
+                    <div class="col-4">
+                      <label class="form-label">Peso (Kg)</label>
+                      <input type="text" class="form-control" id="inputPeso">
+                    </div>        
+                    <div class="col-4">
+                      <label class="form-label">Altura</label>
+                      <input type="text" class="form-control" id="inputAltura">
+                    </div>        
+
+                    <div class="col-12">
+                      <label class="form-label">Historial de salud</label>
+                      <textarea id="historial" class="form-control"></textarea>
+                    </div>                        
                     <div class="col-12">
                       <button type="button" id="update" class="btn btn-success">Actualizar</button>
                     </div>
@@ -104,11 +93,6 @@
             </main>
         </div>
     </div>
-
-    <!-- FOOTER -->
-    <footer class="bg-dark text-white text-center py-3 mt-4">
-        <p>© 2025 Mi Empresa. Todos los derechos reservados.</p>
-    </footer>
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
