--- a/perfil_user.html
+++ b/perfil_user.html
@@ -35,17 +35,19 @@
 
     <div class="container-fluid">
         <div class="row">
-            <!-- SIDEBAR -->
-            <nav class="col-md-3 col-lg-2 d-md-block bg-dark sidebar" id="sidebar">
-                <div class="position-sticky">
-                    <ul class="nav flex-column text-white">
-                        <li class="nav-item"><a class="nav-link text-white" href="dashboard_inicial.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="bi bi-bar-chart"></i> Multimedia</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="listUsers.html"><i class="bi bi-people"></i> Usuarios</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="seguimiento.html"><i class="bi bi-sliders"></i> seguimiento</a></li>
-                    </ul>
-                </div>
-            </nav>
+          <!-- SIDEBAR -->
+          <nav class="col-md-3 col-lg-2 d-md-block bg-dark sidebar" id="sidebar">
+              <div class="position-sticky">
+                  <ul class="nav flex-column text-white">
+                      <li class="nav-item"><a class="nav-link text-white" href="multimedia.html"><i class="bi bi-bar-chart"></i>
+                          Recursos Educativos</a></li>
+                      <li class="nav-item"><a class="nav-link text-white" href="listUsers.html"><i
+                                  class="bi bi-people"></i> Usuarios</a></li>
+                      <li class="nav-item"><a class="nav-link text-white" href="seguimiento.html"><i
+                                  class="bi bi-sliders"></i> seguimiento</a></li>
+                  </ul>
+              </div>
+          </nav>
     
             <!-- CONTENIDO PRINCIPAL -->
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
