--- a/login.html
+++ b/login.html
@@ -6,39 +6,86 @@
     <title>Ingeniería Web | Estudiantes CUN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="login.css">
+    <style>
+        /* Ajuste del margen solo para pantallas grandes */
+        @media (min-width: 992px) {
+            .contenedorInicial {
+                margin-top: 9rem !important;
+            }
+        }
+
+        /* Mejora en la apariencia del fondo y tarjeta */
+        .background-radial-gradient {
+            background: radial-gradient(circle at center, #2c3e50, #34495e);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .card.bg-glass {
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Ajuste de bordes en las imágenes decorativas */
+        #radius-shape-1, #radius-shape-2 {
+            width: 120px;
+            height: 120px;
+            background-color: rgba(255, 255, 255, 0.1);
+            position: absolute;
+            border-radius: 50%;
+        }
+
+        #radius-shape-1 {
+            top: -30px;
+            left: -30px;
+        }
+
+        #radius-shape-2 {
+            bottom: -30px;
+            right: -30px;
+        }
+    </style>
 </head>
 <body class="background-radial-gradient">
-    <div class="container contenedorInicial px-4 py-5 px-md-5 text-center text-lg-start my-5">
-        <div class="row gx-lg-5 align-items-center mb-5">
+    <div class="container contenedorInicial px-4 py-5 text-center text-lg-start">
+        <div class="row gx-lg-5 align-items-center">
+            <!-- Sección de Texto -->
             <div class="col-lg-6 mb-5 mb-lg-0">
-                <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+                <h1 class="my-4 display-5 fw-bold text-white">
                     BIENESTAR Y <br/>
-                    <span style="color: hsl(218, 81%, 75%)">VIDA SALUDABLE</span>
+                    <span class="text-primary">VIDA SALUDABLE</span>
                 </h1>
-                <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+                <p class="text-light opacity-75">
                     Jair Sneider Carvajal Celis <br/>
                     Francy Ospina<br/>
                     Eliana Nieto
                 </p>
             </div>
 
+            <!-- Sección de Login & Registro -->
             <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-                <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
-                <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+                <div id="radius-shape-1"></div>
+                <div id="radius-shape-2"></div>
 
                 <div class="card bg-glass">
-                    <div class="card-body px-4 py-5 px-md-5">
+                    <div class="card-body px-4 py-5">
                         <!-- Pestañas Login / Register -->
-                        <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
-                            <li class="nav-item" role="presentation">
+                        <ul class="nav nav-pills nav-justified mb-3">
+                            <li class="nav-item">
                                 <button class="nav-link active" id="tab-login" data-bs-toggle="pill" 
-                                        data-bs-target="#pills-login" type="button" role="tab">
+                                        data-bs-target="#pills-login" type="button">
                                     Login
                                 </button>
                             </li>
-                            <li class="nav-item" role="presentation">
+                            <li class="nav-item">
                                 <button class="nav-link" id="tab-register" data-bs-toggle="pill" 
-                                        data-bs-target="#pills-register" type="button" role="tab">
+                                        data-bs-target="#pills-register" type="button">
                                     Registrar
                                 </button>
                             </li>
@@ -47,9 +94,9 @@
                         <p id="resultMessage"></p>
 
                         <!-- Contenido de Login & Registro -->
-                        <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-content">
                             <!-- Login Form -->
-                            <div class="tab-pane fade show active" id="pills-login" role="tabpanel">
+                            <div class="tab-pane fade show active" id="pills-login">
                                 <form>
                                     <div class="mb-3">
                                         <label for="loginEmail" class="form-label">Correo</label>
@@ -68,7 +115,7 @@
                             </div>
 
                             <!-- Register Form -->
-                            <div class="tab-pane fade" id="pills-register" role="tabpanel">
+                            <div class="tab-pane fade" id="pills-register">
                                 <form>
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
@@ -104,12 +151,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- jQuery y Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Script personalizado -->
     <script src="script.js"></script>
-
 </body>
 </html>
